src/test/ui/resolve/issue-105364.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `content_line`
  --> $DIR/issue-105364.rs:4:24
   |
LL |     let content_line = content_line::fail();
   |                        ^^^^^^^^^^^^ use of undeclared crate or module `content_line`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
